--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,14 @@
-{}
+{
+    "hosting": {
+        "public": "dist/optica-angular/browser",
+        "ignore": [
+            "firebase.json",
+            "**/.*",
+            "**/node_modules/**"
+        ],
+        "rewrites": [{
+            "source": "**",
+            "destination": "/index.html"
+        }]
+    }
+}
