--- a/package.json
+++ b/package.json
@@ -1,54 +1,87 @@
 {
-  "name": "optica-angular",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "prettier": {
-    "printWidth": 100,
-    "singleQuote": true,
-    "overrides": [
-      {
-        "files": "*.html",
-        "options": {
-          "parser": "angular"
+    "name": "optica-angular",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build --configuration production --base-href ./",
+        "watch": "ng build --watch --configuration development",
+        "test": "ng test",
+        "electron": "electron .",
+        "electron:dev": "ng serve & electron .",
+        "electron:build": "ng build --configuration production && electron-builder",
+        "pack": "electron-builder --dir",
+        "dist": "electron-builder"
+    },
+    "main": "electron/main.js",
+    "prettier": {
+        "printWidth": 100,
+        "singleQuote": true,
+        "overrides": [{
+            "files": "*.html",
+            "options": {
+                "parser": "angular"
+            }
+        }]
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^20.3.15",
+        "@angular/common": "^20.2.0",
+        "@angular/compiler": "^20.2.0",
+        "@angular/core": "^20.2.0",
+        "@angular/fire": "^20.0.1",
+        "@angular/forms": "^20.2.0",
+        "@angular/platform-browser": "^20.2.0",
+        "@angular/router": "^20.2.0",
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.8",
+        "firebase-admin": "^13.6.0",
+        "rxjs": "~7.8.0",
+        "sweetalert2": "^11.26.10",
+        "tslib": "^2.3.0",
+        "xlsx": "^0.18.5",
+        "zone.js": "~0.15.0"
+    },
+    "devDependencies": {
+        "@angular/build": "^20.2.1",
+        "@angular/cli": "^20.2.1",
+        "@angular/compiler-cli": "^20.2.0",
+        "@types/jasmine": "~5.1.0",
+        "electron": "^39.2.7",
+        "electron-builder": "^26.0.12",
+        "jasmine-core": "~5.9.0",
+        "karma": "~6.4.0",
+        "karma-chrome-launcher": "~3.2.0",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.1.0",
+        "karma-jasmine-html-reporter": "~2.1.0",
+        "typescript": "~5.9.2"
+    },
+    "build": {
+        "appId": "com.optica.pasaje",
+        "productName": "SistemaOptica-PASAJE",
+        "directories": {
+            "output": "release"
+        },
+        "files": [
+            "dist/**/*",
+            "electron/**/*",
+            "public/**/*"
+        ],
+        "win": {
+            "target": [
+                "nsis"
+            ],
+            "icon": "public/icono/icon.ico",
+            "signAndEditExecutable": false
+        },
+        "nsis": {
+            "oneClick": false,
+            "allowToChangeInstallationDirectory": true,
+            "createDesktopShortcut": true,
+            "createStartMenuShortcut": true,
+            "shortcutName": "Sistema Óptica PASAJE"
         }
-      }
-    ]
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^20.3.15",
-    "@angular/common": "^20.2.0",
-    "@angular/compiler": "^20.2.0",
-    "@angular/core": "^20.2.0",
-    "@angular/fire": "^20.0.1",
-    "@angular/forms": "^20.2.0",
-    "@angular/platform-browser": "^20.2.0",
-    "@angular/router": "^20.2.0",
-    "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.8",
-    "rxjs": "~7.8.0",
-    "sweetalert2": "^11.26.10",
-    "tslib": "^2.3.0",
-    "xlsx": "^0.18.5",
-    "zone.js": "~0.15.0"
-  },
-  "devDependencies": {
-    "@angular/build": "^20.2.1",
-    "@angular/cli": "^20.2.1",
-    "@angular/compiler-cli": "^20.2.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.9.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.2"
-  }
+    }
 }
