--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,7 @@
 {
   "projects": {
-    "default": "optica-web-d6c89"
-  }
+    "default": "optica-macias"
+  },
+  "targets": {},
+  "etags": {}
 }
