--- a/firebase.json
+++ b/firebase.json
@@ -10,5 +10,8 @@
             "source": "**",
             "destination": "/index.html"
         }]
+    },
+    "firestore": {
+        "rules": "firestore.rules"
     }
 }
