--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
                             "input": "public"
                         }],
                         "styles": [
-                            "src/styles.css"
+                            "src/styles.css",
+                            "src/styles/ticket.css"
                         ]
                     },
                     "configurations": {
