Imprimir caja chica

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
                         }],
                         "styles": [
                             "src/styles.css",
-                            "src/styles/ticket.css"
+                            "src/styles/ticket.css",
+
                         ]
                     },
                     "configurations": {
